hphp/hack/test/typecheck/function_pointer/class_meth_abstract.php.exp
File "class_meth_abstract.php", line 8, characters 8-10:
Cannot create a function pointer to `Foo::bar`; it is abstract (Typing[4391])
  File "class_meth_abstract.php", line 4, characters 35-37:
  Declaration is here
File "class_meth_abstract.php", line 10, characters 8-10:
Cannot create a function pointer to `Foo::bar`; it is abstract (Typing[4391])
  File "class_meth_abstract.php", line 4, characters 35-37:
  Declaration is here
